namespace PieceSystem
{
    public enum PieceDirection { Up, Down, Left, Right, Null }
}
